hphp/test/zend/good/Zend/tests/constants/fixtures/folder1/subfolder4/fixture.php
<?hh

function folder1_sub4_fixture() {
echo __DIR__ . "\n";
echo dirname(__FILE__) . "\n";
}
